<resources>
    <string name="app_name">BedashingApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="lbl_resync">Resynchronize</string>
    <string name="lbl_completed_docs">Completed Documents</string>
    <string name="lbl_logout">Logout</string>
    <string name="network_not_connected_msg">Network not connected, Please try again later.</string>
    <string name="successful_sync_msg">Databases have been synchronized</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="copyrigt">Copyright 2021 © Abacus Cambridge Partners</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_user">Welcome, User</string>
    <string name="select_warehouse">Select Warehouse</string>
    <string name="select_open_po">Select Open PO</string>
    <string name="scan_enter_item">Scan / Enter Item</string>
    <string name="lbl_select_item">Select an Item</string>

    <string name="select_item">Please select an item first!</string>
    <string name="select_branch_to_update">Please Select A Branch</string>
    <string name="enter_counted_qty">Please enter counted quantity</string>
    <string name="enter_qty">Please enter quantity</string>
    <string name="select_uom">Please select uom</string>

    <string name="no_default_region_msg">No Region linked to the item.  \n Please contact Head Office</string>
    <string name="no_default_store_msg">No Store linked to the item.  \n Please contact Head Office</string>
    <string name="post_doc">Are you sure, you want to post document to B1?</string>


    <string name="version_no">Version: 02112021.01</string>
    <string name="yes">YES</string>
    <string name="post_document">Post Document</string>
    <string name="no">NO</string>
    <string name="on_exit_document_message">Are you sure you want to exit. Any unsaved information will be lost</string>
    <string name="exit_document">Exit Document</string>
    <string name="po">PO</string>
    <string name="selected_item_not_exist">Selected item does not exist in this Purchase Order</string>
    <string name="select_req_date">Please select required date!</string>
    <string name="select_due_date">Please select document due date!</string>
    <string name="select_whs">Please select WHS!</string>
    <string name="select_customer">Please Select Customer</string>
    <string name="poDetails">poDetails</string>
    <string name="open_po">openPo</string>
    <string name="check_inventory_status">checkInventoryStatus</string>
    <string name="fetch_quantity">fetchQuantity</string>
    <string name="get_open_po">getOpenPO</string>
    <string name="inventory_counting">inventoryCounting</string>
    <string name="get_data">getData</string>
</resources>