<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<!--    <item-->
<!--        android:id="@+id/action_settings"-->
<!--        android:orderInCategory="100"-->
<!--        android:title="@string/action_settings"-->
<!--        android:icon="@drawable/ic_baseline_settings_24"-->
<!--        app:showAsAction="collapseActionView" />-->
    <item
        android:id="@+id/action_resync"
        android:orderInCategory="100"
        android:icon="@drawable/ic_baseline_sync_24"
        android:title="@string/lbl_resync"
        app:showAsAction="collapseActionView" />

    <item
        android:id="@+id/action_completed_docs"
        android:orderInCategory="100"
        android:icon="@drawable/ic_list_icon"
        android:title="@string/lbl_completed_docs"
        app:showAsAction="collapseActionView" />


    <item
        android:id="@+id/action_logout"
        android:orderInCategory="100"
        android:title="@string/lbl_logout"
        android:icon="@drawable/ic_baseline_logout_24"
        app:showAsAction="collapseActionView" />
</menu>