<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".views.login.LoginActivity">


    <View
        android:id="@+id/test"
        android:layout_width="770dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="-500dp"
        android:layout_marginTop="@dimen/dp14"
        android:layout_marginBottom="@dimen/dp100"
        android:background="@drawable/big_circle_login" />

    <RelativeLayout
        android:layout_width="260dp"
        android:layout_height="260dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_gravity="end"
        android:gravity="bottom"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_gravity="end"
            android:src="@drawable/ic_objsmall" />


    </RelativeLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dp16"
            android:layout_marginTop="@dimen/dp50"
            android:layout_marginBottom="@dimen/dp80"
            android:src="@drawable/ic_logo_black" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp16"
                android:layout_marginEnd="@dimen/dp10"
                android:layout_marginBottom="@dimen/dp10"
                android:fontFamily="@font/open_sans"
                android:gravity="center_vertical"
                android:text="Enter Credentials to Proceed"
                android:textColor="#333"
                android:textSize="@dimen/sp15" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/ic_arrowh" />

        </LinearLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/outlinedTextFieldone"
            style="@style/TextInputLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dp16"
            android:hint="@string/username">

            <com.google.android.material.textfield.TextInputEditText
                style="@style/TextInputLayoutStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:maxLines="1"
                android:id="@+id/et_userName"
                android:inputType="text"
                android:drawableStart="@drawable/ic_username"
                android:drawablePadding="@dimen/dp8" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/outlinedTextFieldtwo"
            style="@style/TextInputLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dp16"
            android:layout_marginTop="@dimen/dp12"
            android:hint="@string/password">

            <com.google.android.material.textfield.TextInputEditText
                style="@style/TextInputLayoutStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:maxLines="1"
                android:id="@+id/et_password"
                android:inputType="textPassword"
                android:drawableStart="@drawable/ic_pwd"
                android:drawablePadding="@dimen/dp8" />

        </com.google.android.material.textfield.TextInputLayout>


        <LinearLayout
            android:id="@+id/buttonarea"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp16"
                android:layout_marginTop="@dimen/dp8"
                android:layout_weight="1"
                android:fontFamily="@font/open_sans_light"
                android:gravity="center_vertical"
                android:text="Forgot Password ?"
                android:textColor="#333"
                android:textSize="@dimen/sp16" />

            <Button
                android:id="@+id/btn_click_me"
                style="@style/Widget.App.Button"
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp15"
                android:layout_marginEnd="@dimen/dp16"
                android:text="Sign In" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="bottom"
            android:layout_marginStart="@dimen/dp16"
            android:layout_marginBottom="@dimen/dp12"
            android:gravity="bottom"
            android:orientation="vertical">

            <ImageView
                android:layout_width="150dp"
                android:layout_height="35dp"
                android:src="@drawable/sapbyd" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:fontFamily="@font/open_sans"
                android:text="@string/copyrigt"
                android:textColor="#BF000000"
                android:textSize="@dimen/sp14" />

        </LinearLayout>


    </LinearLayout>

    <RelativeLayout
        xmlns:tool="http://schemas.android.com/tools"
        android:id="@+id/progress_bar_for_problematic_resync"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#D0FFFFFF"
        android:visibility="gone"

        >

        <android.widget.ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:indeterminateTint="@color/teal_700"
            android:progressDrawable="@color/teal_700"
            android:indeterminateTintMode="src_in" />

        <TextView
            android:id="@+id/progress_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/progress_bar"
            android:layout_marginTop="28dp"
            android:textColor="@color/colorPrimary"
            android:gravity="center"
            tool:text="Enter your message here" />
    </RelativeLayout>


</RelativeLayout>